# LFBA_Tokyo

./: .gitignore  README.md  README_ja.md
centralManeger/: README.md  README_front.md  back.py  back_refactor.py  config.toml  main.py  pyproject.toml
centralManeger/src/centralmaneger/: main.py
centralManeger/src/centralmaneger/camera/: camera.py  cameraApp.py
centralManeger/src/centralmaneger/create_dataset/: folder_monitor.py
centralManeger/src/centralmaneger/image/: camera.py
centralManeger/src/centralmaneger/image_classification/: classifier.py
centralManeger/src/centralmaneger/model_training/: model_training.py
centralManeger/src/centralmaneger/serial/: serial_reader.py  serial_write.py
centralManeger/src/manager/: api_server.py  config_manager.py  logger_setup.py  thread_manager.py
centralManeger/src/tool/camera/: camera.py
centralManeger/src/tool/create_dataset/: folder_monitor.py
centralManeger/src/tool/image_classification/: classifier.py
centralManeger/src/tool/model_training/: model_training.py
centralManeger/src/tool/serial/: communication.py  serial_reader.py  serial_write.py
centralManeger/tests/: test_main.py  test_serial.py
centralManeger_withApp/: pyproject.toml
centralManeger_withApp/src/centralmaneger_withapp/: app.py
centralManeger_withApp/static/: index.html
controller/: controller.ino
frontend/: README.md
frontend/src/app/: page.tsx
switcher/: README.md  switcher.ino
