[project]
name = "centralmaneger-withapp"
version = "0.1.0"
description = ""
authors = [
    {name = "k-84mo10",email = "k-84mo10@g.ecc.u-tokyo.ac.jp"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserial (>=3.5,<4.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "fastapi (>=0.115.8,<0.116.0)"
]

[tool.poetry]
packages = [{include = "centralmaneger_withapp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
